--- a/src/main/resources/springing.properties
+++ b/src/main/resources/springing.properties
@@ -2,3 +2,4 @@ datasource.driver=org.h2.Driver
 datasource.url=jdbc:h2:tcp://localhost/~/databases/migration
 datasource.username=sa
 datasource.password=
+datasource.schema=classpath:persistence/sql/dropIfExists.sql,classpath:persistence/sql/schema.sql
